--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <div id="result"></div>
 
-  <script src="script.js"></script>
+  <script src="script.js"></script><!-- Librairie de détection de visage -->
+<script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
 </body>
 </html>
