--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <div id="result"></div>
 
-  <script src="script.js"></script><!-- Librairie de détection de visage -->
+  <script src="script.js"></script>
+<!-- Librairie de détection de visage -->
 <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
 </body>
 </html>
